Jackson 3 + Modernizer + Prepare for 2026.6